--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
         drawText(firstPage, '---------           ---------------', 152, 418)
         //drawText(firstPage, date1.slice(5,7), 90, 342)
         //drawText(firstPage, date1.slice(8,10), 320, 342)
-        drawText(firstPage, "20:00          22:00", 425, 342)
+//         drawText(firstPage, "20:00          22:00", 425, 342)
         //drawText(firstPage, date2.slice(5,7), 90, 322)
         //drawText(firstPage, date2.slice(8,10), 320, 322)
-        drawText(firstPage, "20:00          22:00", 425, 322)
+//         drawText(firstPage, "20:00          22:00", 425, 322)
 
         //drawText(firstPage, now.toISOString().slice(0, 10), 105, 115)
         // Serialize the PDFDocument to bytes (a Uint8Array)
