--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <p><input id='file-selector' type="file" accept="text/txt"></p>
     <p>首選 <input id='datePicker1' type="date"></p>
     <p>次選 <input id='datePicker2' type="date"></p>
-    <input id="por" type="radio" checked='true' name="location"><label>保安道</label><br>
+    <input id="por" type="radio" checked='true' name="location"><label>觀塘康寧道</label><br>
     <input id="css" type="radio" name="location"><label>長順街</label><br>
     <br>
     <br>
@@ -71,8 +71,8 @@
       
       var location = {}
       if(document.getElementById('por').checked) {
-        location.name = "Po On Road Playground"
-        location.id = '2'
+        location.name = "Hong Ning Road Recreation Ground"
+        location.id = '1'
       }
 
       if(document.getElementById('css').checked) {
